--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "daily-dictionary",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.16.0",
+    "yarn": "please use npm",
+    "npm": ">=9.5.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
