--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "engines": {
     "node": ">=18.16.0",
     "yarn": "please use npm",
-    "npm": ">=9.5.1"
+    "npm": ">=9.6.7"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.2.3",
@@ -26,6 +27,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "^2.8.8"
   }
 }
